# humanesque-long-term-memory

./: main.py  pyproject.toml
clustering/: local_embed.py
utils/: __init__.py  add_stop_words.py  cluster_tools.py  format_msgs.py
